# snap_imu

./: CMakeLists.txt  README.md  package.xml  snap_imu_nodelet.xml
include/snap_imu/: snap_imu.hpp
launch/: imu.launch
src/: SnapdragonImuManager.cpp  SnapdragonImuManager.hpp  snap_imu.cpp  snap_imu_node.cpp  snap_imu_nodelet.cpp
